feat: dockerize app